[gd_scene load_steps=15 format=3 uid="uid://c006ssmvp01ln"]

[ext_resource type="Script" path="res://Slime.gd" id="1_fruk3"]
[ext_resource type="Texture2D" uid="uid://v4epfnw0ulg5" path="res://assets/animations/enemies/slimetemp.png" id="2_5q33f"]
[ext_resource type="Script" path="res://scenes/enemies/Navigation.gd" id="3_h01m3"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_uidh6"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_dqi6k"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_be6ge"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_klaxq"]

[sub_resource type="Curve" id="Curve_m4xj0"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_mfyqd"]
curve = SubResource("Curve_m4xj0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xfrpx"]
spread = 0.0
gravity = Vector3(0, 0, 0)
alpha_curve = SubResource("CurveTexture_mfyqd")

[sub_resource type="Gradient" id="Gradient_pqsc4"]
offsets = PackedFloat32Array(0.073903, 0.138568)
colors = PackedColorArray(0.14408, 0.188232, 0.0523401, 0.419608, 0.0509804, 0.0745098, 0.0117647, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_anyao"]
gradient = SubResource("Gradient_pqsc4")
width = 20
height = 20
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_ngqlf"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hb6ll"]
radius = 78.2304

[node name="Slime" type="CharacterBody2D" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("1_fruk3")
nav_agent = NodePath("Navigation")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
amount = 30
process_material = SubResource("ParticleProcessMaterial_xfrpx")
texture = SubResource("GradientTexture2D_anyao")
draw_order = 2
trail_lifetime = 1.26

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("2_5q33f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_ngqlf")

[node name="Navigation" type="Node2D" parent="."]
script = ExtResource("3_h01m3")

[node name="DetectionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_hb6ll")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_uidh6")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("4_dqi6k")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root"]
script = ExtResource("5_be6ge")

[node name="To Following" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("6_klaxq")
to = NodePath("../../Following")
event = &"player_entered"
delay_in_seconds = "0.0"

[node name="Following" type="Node" parent="StateChart/Root"]
script = ExtResource("5_be6ge")

[node name="Jumping" type="Node" parent="StateChart/Root"]
script = ExtResource("5_be6ge")

[connection signal="area_entered" from="DetectionRange" to="." method="_on_detection_range_area_entered"]
[connection signal="state_entered" from="StateChart/Root/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Following" to="." method="_on_following_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Following" to="." method="_on_following_state_physics_processing"]
